tests/invalid/match_range_subject_type_mismatch.wio
fn Entry() -> i32 {
    return match ("x") {
        1...3: 10;
        assumed: 20;
    };
}
